Improve contrast ratio for links (resolves #331) (#343)
* fix: applied inline flex to tag fiter label span

* fix: changed colour of links causing contrast ratio issues

* fix: add colour variables for contrast link colours

* fix: change variable name of link colour on yellow backgrounds

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -31,7 +31,7 @@ p {
 
 // Links and Buttons.
 a {
-	color: $blue-alt;
+	color: $blue-alt-contrast;
 	font-weight: $font-weight-bold;
 	text-decoration: none;
 }
@@ -39,6 +39,7 @@ a {
 a:hover,
 a:focus {
 	background-color: $orange-focus;
+	color: $blue-alt-dark;
 }
 
 a:focus {
